--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "grand-wazoo-breadcrumb",
+  "name": "yupik-breadcrumb",
   "version": "0.0.2",
-  "homepage": "https://github.com/laurentperroteau/grand-wazoo-breadcrumb",
+  "homepage": "https://github.com/laurentperroteau/yupik-breadcrumb",
   "authors": [
     "laurentperroteau <laurentperroteau@gmail.com>"
   ],
