--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "tests"
   ],
   "dependencies": {
-    "inuit-clearfix": "~0.2.0"
+    "inuit-clearfix": "~0.2.0",
+    "inuit-box-sizing": "~0.2.0"
   }
 }
